--- a/CurrencyConverter.Api/appsettings.json
+++ b/CurrencyConverter.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CurrencyProviders": {
+    "ActiveProvider": "Frankfurter"
+  },
+  "Frankfurter": {
+    "BaseUrl": "https://api.frankfurter.app/"
+  }
 }
