Resiliance and security added

--- a/CurrencyConverter.Api/appsettings.json
+++ b/CurrencyConverter.Api/appsettings.json
@@ -11,5 +11,28 @@
   },
   "Frankfurter": {
     "BaseUrl": "https://api.frankfurter.app/"
+  },
+  "FrankfurterResilience": {
+    "TimeoutSeconds": 10,
+    "RetryMaxAttempts": 3,
+    "RetryBaseDelayMilliseconds": 200,
+    "CircuitBreakerSamplingSeconds": 30,
+    "CircuitBreakerMinimumThroughput": 10,
+    "CircuitBreakerFailureRatio": 0.5,
+    "CircuitBreakerBreakSeconds": 20
+  },
+  "Jwt": {
+    "Issuer": "CurrencyConverter",
+    "Audience": "CurrencyConverterClients",
+    "ClockSkewSeconds": 30,
+    "TokenLifetimeMinutes": 60
+  },
+  "RateLimiting": {
+    "TokenBucket": {
+      "PermitLimit": 60,
+      "QueueLimit": 0,
+      "TokensPerPeriod": 60,
+      "ReplenishmentPeriodSeconds": 60
+    }
   }
 }
