--- a/CurrencyConverter.Infrastructure/CurrencyConverter.Infrastructure.csproj
+++ b/CurrencyConverter.Infrastructure/CurrencyConverter.Infrastructure.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="10.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.2" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="10.2.0" />
   </ItemGroup>
 
 </Project>
