--- a/CurrencyConverter.Api/appsettings.json
+++ b/CurrencyConverter.Api/appsettings.json
@@ -5,6 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext" ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ]
+  },
   "AllowedHosts": "*",
   "CurrencyProviders": {
     "ActiveProvider": "Frankfurter"
