Add unit and integration tests for various components

--- a/CurrencyConverter.Infrastructure/CurrencyConverter.Infrastructure.csproj
+++ b/CurrencyConverter.Infrastructure/CurrencyConverter.Infrastructure.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="CurrencyConverter.IntegrationTests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CurrencyConverter.Application\CurrencyConverter.Application.csproj" />
   </ItemGroup>
 
