--- a/server/tests/CurrencyConverter.IntegrationTests/CurrencyConverter.IntegrationTests.csproj
+++ b/server/tests/CurrencyConverter.IntegrationTests/CurrencyConverter.IntegrationTests.csproj
@@ -13,7 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="8.8.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.*" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
@@ -25,9 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CurrencyConverter.Api\CurrencyConverter.Api.csproj" />
-    <ProjectReference Include="..\..\CurrencyConverter.Domain\CurrencyConverter.Domain.csproj" />
-    <ProjectReference Include="..\..\CurrencyConverter.Application\CurrencyConverter.Application.csproj" />
+    <ProjectReference Include="..\..\src\CurrencyConverter.Api\CurrencyConverter.Api.csproj" />
+    <ProjectReference Include="..\..\src\CurrencyConverter.Application\CurrencyConverter.Application.csproj" />
+    <ProjectReference Include="..\..\src\CurrencyConverter.Domain\CurrencyConverter.Domain.csproj" />
+    <ProjectReference Include="..\..\src\CurrencyConverter.Infrastructure\CurrencyConverter.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
